--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mysql2": "^3.13.0"
@@ -8,8 +9,7 @@
     "nodemon": "^3.1.9"
   },
   "scripts": {
-  "start": "node login.js",
-  "dev": "nodemon login.js"
-}
-
+    "start": "node login.js",
+    "dev": "nodemon login.js"
+  }
 }
